// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapse renders a closed panel 1`] = `
<ExpandCollapse
  open={Array []}
  topDivider={true}
>
  <Panels
    isPanelOpen={[Function]}
    open={Array []}
    togglePanel={[Function]}
    topDivider={true}
  >
    <div
      className="base"
      open={Array []}
    >
      <HairlineDivider
        gradient={false}
        vertical={false}
      >
        <hr
          className="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
        />
      </HairlineDivider>
      <PanelWrapper
        key="panel-1"
        onClick={[Function]}
        open={false}
        panelDisabled={false}
        panelHeader="Panel title"
        panelId="panel-1"
      >
        <div
          data-testid="panel-1"
        >
          <Clickable
            aria-expanded={false}
            dangerouslyAddClassName="header"
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <button
              aria-expanded={false}
              className="clickable header"
              disabled={false}
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <Box
                inline={false}
                tag="div"
                vertical={3}
              >
                <Responsive
                  defaultMatches={false}
                  minWidth="md"
                  query={Object {}}
                >
                  <Media
                    defaultMatches={false}
                    query={
                      Object {
                        "minWidth": 768,
                      }
                    }
                  >
                    <div
                      className="TDS_Box-modules__verticalPaddingDesktop-3___a3GtY"
                    >
                      <Box
                        between={3}
                        inline={true}
                        tag="div"
                      >
                        <Responsive
                          defaultMatches={false}
                          minWidth="md"
                          query={Object {}}
                        >
                          <Media
                            defaultMatches={false}
                            query={
                              Object {
                                "minWidth": 768,
                              }
                            }
                          >
                            <div
                              className="TDS_Box-modules__betweenRightMarginDesktop-3___1pe04 TDS_Box-modules__inline___jTHcz"
                            >
                              <div>
                                <Translate
                                  direction="y"
                                  distance="0.25rem"
                                  in={false}
                                  timeout={300}
                                >
                                  <Transition
                                    appear={false}
                                    enter={true}
                                    exit={true}
                                    in={false}
                                    mountOnEnter={false}
                                    onEnter={[Function]}
                                    onEntered={[Function]}
                                    onEntering={[Function]}
                                    onExit={[Function]}
                                    onExited={[Function]}
                                    onExiting={[Function]}
                                    timeout={300}
                                    unmountOnExit={false}
                                  >
                                    <div
                                      style={
                                        Object {
                                          "transition": "transform 300ms",
                                        }
                                      }
                                    >
                                      <Text
                                        block={false}
                                        bold={false}
                                        invert={false}
                                        size="large"
                                      >
                                        <span
                                          className="TDS_Typography-modules__large___3n6Vn TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__largeFont___2ELMx TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__color___22Swj"
                                        >
                                          <DecorativeIcon
                                            size={16}
                                            symbol="caretDown"
                                            variant="primary"
                                          >
                                            <Icon
                                              aria-hidden="true"
                                              size={16}
                                              symbol="caretDown"
                                              variant="primary"
                                            >
                                              <i
                                                aria-hidden="true"
                                                className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
                                              />
                                            </Icon>
                                          </DecorativeIcon>
                                        </span>
                                      </Text>
                                    </div>
                                  </Transition>
                                </Translate>
                              </div>
                              <Responsive
                                maxWidth="md"
                                query={Object {}}
                              >
                                <Media
                                  defaultMatches={true}
                                  query={
                                    Object {
                                      "maxWidth": 767,
                                    }
                                  }
                                >
                                  <Flexbox
                                    dangerouslyAddClassName="headerAlign"
                                    direction="row"
                                  >
                                    <div
                                      className="row headerAlign"
                                    >
                                      <Flexbox
                                        dangerouslyAddClassName="headerAlign"
                                        direction="column"
                                      >
                                        <div
                                          className="column headerAlign"
                                        >
                                          <Text
                                            block={false}
                                            bold={false}
                                            invert={false}
                                            size="large"
                                          >
                                            <span
                                              className="TDS_Typography-modules__large___3n6Vn TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__largeFont___2ELMx TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__color___22Swj"
                                            >
                                              Panel title
                                            </span>
                                          </Text>
                                        </div>
                                      </Flexbox>
                                    </div>
                                  </Flexbox>
                                </Media>
                              </Responsive>
                            </div>
                          </Media>
                        </Responsive>
                      </Box>
                    </div>
                  </Media>
                </Responsive>
              </Box>
            </button>
          </Clickable>
          <Reveal
            height={0}
            in={false}
            timeout={500}
          >
            <Transition
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={500}
              unmountOnExit={false}
            >
              <div
                style={
                  Object {
                    "height": 0,
                    "overflow": "hidden",
                    "transition": "height 500ms",
                  }
                }
              >
                <div
                  aria-hidden={true}
                  data-testid="content"
                >
                  <DimpleDivider>
                    <hr
                      className="TDS_DimpleDivider-modules__dimple___1OWjL TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
                    />
                  </DimpleDivider>
                  <Box
                    inline={false}
                    inset={4}
                    tag="div"
                  >
                    <Responsive
                      defaultMatches={false}
                      minWidth="md"
                      query={Object {}}
                    >
                      <Media
                        defaultMatches={false}
                        query={
                          Object {
                            "minWidth": 768,
                          }
                        }
                      >
                        <div
                          className="TDS_Box-modules__horizontalPaddingDesktop-4___awwLJ TDS_Box-modules__verticalPaddingDesktop-4___1KCGS"
                        >
                          <Text
                            block={true}
                            bold={false}
                            invert={false}
                            size="base"
                          >
                            <div
                              className="TDS_Typography-modules__base___3JQ2A TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__baseFont___-Br-_ TDS_Typography-modules__color___22Swj"
                            >
                              <Panel
                                disabled={false}
                                header="Panel title"
                                id="panel-1"
                                key=".0"
                              >
                                <div>
                                  Panel content
                                </div>
                              </Panel>
                            </div>
                          </Text>
                        </div>
                      </Media>
                    </Responsive>
                  </Box>
                </div>
              </div>
            </Transition>
          </Reveal>
          <HairlineDivider
            gradient={false}
            vertical={false}
          >
            <hr
              className="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
            />
          </HairlineDivider>
        </div>
      </PanelWrapper>
    </div>
  </Panels>
</ExpandCollapse>
`;

exports[`ExpandCollapse renders an open panel 1`] = `
<ExpandCollapse
  open={
    Array [
      "panel-1",
    ]
  }
  topDivider={true}
>
  <Panels
    isPanelOpen={[Function]}
    open={
      Array [
        "panel-1",
      ]
    }
    togglePanel={[Function]}
    topDivider={true}
  >
    <div
      className="base"
      open={
        Array [
          "panel-1",
        ]
      }
    >
      <HairlineDivider
        gradient={false}
        vertical={false}
      >
        <hr
          className="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
        />
      </HairlineDivider>
      <PanelWrapper
        key="panel-1"
        onClick={[Function]}
        open={true}
        panelDisabled={false}
        panelHeader="Panel title"
        panelId="panel-1"
      >
        <div
          data-testid="panel-1"
        >
          <Clickable
            aria-expanded={true}
            dangerouslyAddClassName="header"
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <button
              aria-expanded={true}
              className="clickable header"
              disabled={false}
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <Box
                inline={false}
                tag="div"
                vertical={3}
              >
                <Responsive
                  defaultMatches={false}
                  minWidth="md"
                  query={Object {}}
                >
                  <Media
                    defaultMatches={false}
                    query={
                      Object {
                        "minWidth": 768,
                      }
                    }
                  >
                    <div
                      className="TDS_Box-modules__verticalPaddingDesktop-3___a3GtY"
                    >
                      <Box
                        between={3}
                        inline={true}
                        tag="div"
                      >
                        <Responsive
                          defaultMatches={false}
                          minWidth="md"
                          query={Object {}}
                        >
                          <Media
                            defaultMatches={false}
                            query={
                              Object {
                                "minWidth": 768,
                              }
                            }
                          >
                            <div
                              className="TDS_Box-modules__betweenRightMarginDesktop-3___1pe04 TDS_Box-modules__inline___jTHcz"
                            >
                              <div>
                                <Translate
                                  direction="y"
                                  distance="-0.25rem"
                                  in={false}
                                  timeout={300}
                                >
                                  <Transition
                                    appear={false}
                                    enter={true}
                                    exit={true}
                                    in={false}
                                    mountOnEnter={false}
                                    onEnter={[Function]}
                                    onEntered={[Function]}
                                    onEntering={[Function]}
                                    onExit={[Function]}
                                    onExited={[Function]}
                                    onExiting={[Function]}
                                    timeout={300}
                                    unmountOnExit={false}
                                  >
                                    <div
                                      style={
                                        Object {
                                          "transition": "transform 300ms",
                                        }
                                      }
                                    >
                                      <Text
                                        block={false}
                                        bold={false}
                                        invert={false}
                                        size="large"
                                      >
                                        <span
                                          className="TDS_Typography-modules__large___3n6Vn TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__largeFont___2ELMx TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__color___22Swj"
                                        >
                                          <DecorativeIcon
                                            size={16}
                                            symbol="caretUp"
                                            variant="primary"
                                          >
                                            <Icon
                                              aria-hidden="true"
                                              size={16}
                                              symbol="caretUp"
                                              variant="primary"
                                            >
                                              <i
                                                aria-hidden="true"
                                                className="TDS_Icon-modules__iconCaretUp___3PL_K TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
                                              />
                                            </Icon>
                                          </DecorativeIcon>
                                        </span>
                                      </Text>
                                    </div>
                                  </Transition>
                                </Translate>
                              </div>
                              <Responsive
                                maxWidth="md"
                                query={Object {}}
                              >
                                <Media
                                  defaultMatches={true}
                                  query={
                                    Object {
                                      "maxWidth": 767,
                                    }
                                  }
                                >
                                  <Flexbox
                                    dangerouslyAddClassName="headerAlign"
                                    direction="row"
                                  >
                                    <div
                                      className="row headerAlign"
                                    >
                                      <Flexbox
                                        dangerouslyAddClassName="headerAlign"
                                        direction="column"
                                      >
                                        <div
                                          className="column headerAlign"
                                        >
                                          <Text
                                            block={false}
                                            bold={false}
                                            invert={false}
                                            size="large"
                                          >
                                            <span
                                              className="TDS_Typography-modules__large___3n6Vn TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__largeFont___2ELMx TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__color___22Swj"
                                            >
                                              Panel title
                                            </span>
                                          </Text>
                                        </div>
                                      </Flexbox>
                                    </div>
                                  </Flexbox>
                                </Media>
                              </Responsive>
                            </div>
                          </Media>
                        </Responsive>
                      </Box>
                    </div>
                  </Media>
                </Responsive>
              </Box>
            </button>
          </Clickable>
          <Reveal
            height={0}
            in={true}
            timeout={500}
          >
            <Transition
              appear={false}
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={500}
              unmountOnExit={false}
            >
              <div
                style={
                  Object {
                    "height": "0px",
                    "overflow": "hidden",
                    "transition": "height 500ms",
                  }
                }
              >
                <div
                  aria-hidden={false}
                  data-testid="content"
                >
                  <DimpleDivider>
                    <hr
                      className="TDS_DimpleDivider-modules__dimple___1OWjL TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
                    />
                  </DimpleDivider>
                  <Box
                    inline={false}
                    inset={4}
                    tag="div"
                  >
                    <Responsive
                      defaultMatches={false}
                      minWidth="md"
                      query={Object {}}
                    >
                      <Media
                        defaultMatches={false}
                        query={
                          Object {
                            "minWidth": 768,
                          }
                        }
                      >
                        <div
                          className="TDS_Box-modules__horizontalPaddingDesktop-4___awwLJ TDS_Box-modules__verticalPaddingDesktop-4___1KCGS"
                        >
                          <Text
                            block={true}
                            bold={false}
                            invert={false}
                            size="base"
                          >
                            <div
                              className="TDS_Typography-modules__base___3JQ2A TDS_Typography-modules__wordBreak___11Xyp TDS_Typography-modules__baseFont___-Br-_ TDS_Typography-modules__color___22Swj"
                            >
                              <Panel
                                disabled={false}
                                header="Panel title"
                                id="panel-1"
                                key=".0"
                              >
                                <div>
                                  Panel content
                                </div>
                              </Panel>
                            </div>
                          </Text>
                        </div>
                      </Media>
                    </Responsive>
                  </Box>
                </div>
              </div>
            </Transition>
          </Reveal>
          <HairlineDivider
            gradient={false}
            vertical={false}
          >
            <hr
              className="TDS_HairlineDivider-modules__horizontalThin___jAiIF TDS_HairlineDivider-modules__horizontal___14xom TDS_HairlineDivider-modules__reset___e92-M TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ"
            />
          </HairlineDivider>
        </div>
      </PanelWrapper>
    </div>
  </Panels>
</ExpandCollapse>
`;
